--- a/src/components/UI/Card.css
+++ b/src/components/UI/Card.css
@@ -1,10 +1,13 @@
+@media (min-width: 580px) {
 .card {
     border-radius: 12px;
     box-shadow: -5px 16px 8px rgb(0 0 0 / 25%);
   }
   .card:hover{
     
-    transform: scale(1.05);
+    transform: scale(1.01);
+    transition-timing-function: ease-in;
     /* background-color: rgba(255,255,255,0.8); */
     background-color: #05720c;
+}
 }
